# Thinker

./: .gitignore  LICENSE  README.md  README_CN.md  app.py  claude_decision_maker.py  claude_decision_maker_GEN2.py  main.py  prompt_02  prompt_03_brief  prompt_04_predictions  prompt_05_suggestions  prompt_06_simulation  prompt_07_finalOutput  pyproject.toml  requirements.txt  user_interface.py
commons/: ThinkerInterface.py
commons/components/: LLMCores.py  MemoryComponents.py  QueryComponents.py  ThinkComponents.py
commons/components/api/settings/: common_settings.py  openai_settings.py
commons/components/mechanics/: Loaders.py  QueryOperations.py
resources/VectorDB/: chroma.sqlite3
resources/prompts/: prompt_03_brief  prompt_04_predictions  prompt_05_suggestions  prompt_06_simulation  prompt_07_finalOutput
resources/references/: config.json
resources/remote_services/: api_key
