[project]
name = "thinker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.4.15",
    "google-generativeai==0.3.1",
    "gradio~=6.5",
    "openai~=2.21",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "scikit-learn>=1.7.1",
]


[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
